# NUDORMS

./: .env.example  .gitignore  CLAUDE.md  README.md  compass_artifact_wf-83f1af9b-a5ef-4d75-a130-377d960fbb88_text_markdown.md  test6_pruned.ply
backend/: pyproject.toml
backend/app/: celery_app.py  db.py  main.py  models.py  storage.py
backend/pipeline/: auto_stop.py  cleanup.py  frame_select.py  graph.py  ingest_qc.py  lightglue_pto_match.py  mesh_export.py  orchestrator.py  priors.py  stitch.py  types.py
backend/pipeline/compress/: __init__.py  lod.py  sogs.py
backend/pipeline/poses/: colmap.py  ensemble.py  glomap.py  mast3r.py  spectacular_ai.py  vggt.py
backend/pipeline/train/: difix3d.py  eval.py  gsplat_mcmc.py  pgsr.py  scaffold_gs.py  threedgut.py  twodgs.py
backend/scripts/: export_ply_from_ckpt.py  prune_needles.py  smoke_cpu_stages.py  smoke_graph.py  smoke_pose_stage.py  smoke_stitch.py  smoke_train_stage.py  upload_ply.py  upload_renders.py  upload_to_r2.py
docs/: plan-learned-pose.md  runpod-bootstrap-postmortem.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: api.js  api.ts  main.js  main.tsx  vendor.d.ts
frontend/src/capture/: CoverageMap.js  CoverageMap.ts  GuidedRecorder.js  GuidedRecorder.tsx
frontend/src/pages/: Capture.js  Capture.tsx  Demo.js  Demo.tsx  Status.js  Status.tsx  Viewer.js  (+1 more)
infra/: RUNPOD.md  docker-compose.yml  gpu-worker.Dockerfile  runpod_bootstrap.sh
test2_frames/: frame_timestamps.json
test_frames/: frame_timestamps.json
(+3 files in other folders)
